# conjuror

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  bitbucket-pipelines.yml  noxfile.py  paper.bib  paper.md  pyproject.toml  readme.rst
conjuror/: utils.py
conjuror/images/: layers.py  simulators.py
conjuror/plans/: beam.py  dicom.py  fluence.py  halcyon.py  machine.py  mlc.py  plan_generator.py  plan_generator_base.py  plan_generator_halcyon.py  plan_generator_truebeam.py  procedures_halcyon.py  procedures_truebeam.py  truebeam.py  visualization.py
docs/: requirements-rtd.txt
docs/source/: conf.py  index.rst  overview.rst
docs/source/plans/: create_plans.rst  overview.rst  truebeam.rst  users_guide.rst  varian_reference_warning.rst
joss/: paper.bib  paper.md
tests/: __init__.py  test_beam.py  test_halcyon.py  test_image_generator.py  test_mlc.py  test_plan_generator.py  test_truebeam.py  utils.py
