[project]
name = "conjuror"
requires-python = ">=3.11"
version = "0.1.0"
description = "Medical Physics Synthetic Image generator and RT Plan generator"
authors = [
    {name = "Joao Silveira", email = "jsilveira@radformation.com"},
    {name = "James Kerns", email = "jkerns@radformation.com"}
]
readme = "readme.rst"
license = "MIT"
keywords = ["medical", "physics", "image", "analysis", "RT Plan"]

dependencies = [
    "pydicom>=3.0",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "scikit-image>=0.25.2",
    "matplotlib>=3.10.6",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
docs = [
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx>=8.2.3",
    "furo>=2025.9.25",
]
developer = [
    "nox>=2025.5.1",
    "parameterized>=0.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "google-cloud-storage>=3.4.0",
    "py-linq~=1.4.0",
]

[tool.ruff]
target-version = "py311"


[tool.setuptools.packages.find]
include = ["conjuror"]
