[project]
name = "conjuror"
requires-python = ">=3.11,<3.12" # match RM
version = "0.1.2"
description = "Medical Physics Synthetic Image generator and RT Plan generator"
authors = [
    {name = "Joao Silveira", email = "jsilveira@radformation.com"},
    {name = "James Kerns", email = "jkerns@radformation.com"}
]
readme = "readme.rst"
license = "MIT"
keywords = ["medical", "physics", "image", "analysis", "RT Plan"]

dependencies = [
    "pydantic>=2.0",
    "pydicom~=2.4.0", # match RM
    "numpy~=1.23.0", # match RM
    "plotly~=5.8", # match RM
    "scikit-image~=0.20.0", # match RM
]

[project.optional-dependencies]
docs = [
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-plotly-directive>=0.1.3",
    "sphinx>=8.2.3",
    "furo>=2025.9.25",
    "autodoc_pydantic>=2.2.0",
]
developer = [
    "nox>=2025.5.1",
    "parameterized>=0.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "google-cloud-storage>=3.4.0",
    "py-linq~=1.4.0",
    "pre-commit>=4.3.0",
]

[tool.ruff]
target-version = "py311"


[tool.setuptools.packages.find]
include = ["conjuror*"]
